TermView::Draw(): * Apparently Draw() can be invoked with new view bounds in effect before the   FrameResized() hook has been invoked (I suppose that's not really kosher).   Since TermView updates the terminal dimensions in FrameResized() and relied   on the update rect passed to Draw() to translate to positions within the   limits, an on-stack buffer could overflow, leading to #2851. Now we clamp   the translated positions to terminal size. * Draw the background areas right of the last column and below the last row   explicitly instead of drawing an additional non-existing partial   character/row.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35587 a95241bf-73f2-0310-859d-f6bbb57e9c96